--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -74,6 +74,7 @@
         <file alias="superstake">res/icons/superstake.png</file>
         <file alias="ledger_on">res/icons/ledger_on.png</file>
         <file alias="ledger_off">res/icons/ledger_off.png</file>
+        <file alias="hide">res/icons/hide.png</file>
     </qresource>
     <qresource prefix="/animation">
         <file alias="spinner-000">res/animation/spinner-000.png</file>
