Fix detached and receive dialog

--- a/src/qt/forms/receivecoinsdialog.ui
+++ b/src/qt/forms/receivecoinsdialog.ui
@@ -92,7 +92,7 @@
            <item row="5" column="0">
             <widget class="QLabel" name="label_3">
              <property name="toolTip">
-              <string>An optional message to attach to the payment request, which will be displayed when the request is opened. Note: The message will not be sent with the payment over the Qtum network.</string> //QTUM_LINE
+              <string>An optional message to attach to the payment request, which will be displayed when the request is opened. Note: The message will not be sent with the payment over the Qtum network.</string>
              </property>
              <property name="text">
               <string>&amp;Message:</string>
